# ValhallaAndroidPOC

./: .gitignore  README.md  build_android.sh  build_protoc.sh  build_wrapper.sh  combine_libs.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/valhalla/pocapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/valhalla/pocapp/: MainActivity.kt
app/src/main/java/com/valhalla/pocapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/valhalla/pocapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
scripts/archive/: build_android.sh  build_protobuf.sh  merge_to_shared.sh
src/: CMakeLists.txt
src/wrapper/: CMakeLists.txt  main.cpp  valhalla_actor.cpp
src/wrapper/include/: main.h
valhalla/: build.gradle
valhalla/src/androidTest/java/com/valhalla/valhalla/: ExampleInstrumentedTest.kt
valhalla/src/main/: AndroidManifest.xml
valhalla/src/main/cpp/: valhalla-actor.cpp  valhalla-actor.h  valhalla-jni.cpp
valhalla/src/main/java/com/valhalla/valhalla/: FileUtils.kt  ValhallaActor.kt
valhalla/src/main/res/values/: strings.xml  themes.xml
valhalla/src/main/res/values-night/: themes.xml
valhalla/src/test/java/com/valhalla/valhalla/: ExampleUnitTest.kt
